--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+
+html, body, #root {
+  width: 100%;
+
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  display: flex;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -o-flex;
+
+  align-items: center;
+  justify-content: center;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
